# coco-xiaomusic

./: .gitignore  .npmrc  README.md  desktop_app.py  index.html  main.py  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.ts  windows_service.py
.cargo/: config.toml
assets/: dashboard.css  dashboard.js
coco_xiaomusic/: coco_client.py  native_app.py  service.py  settings.py  web.py
packaging/installer/: coco-xiaomusic.iss
packaging/pyinstaller/: coco-xiaomusic.spec
scripts/: build_desktop.ps1  build_installer.ps1  publish_release.ps1  run_desktop.ps1
sidecar/: __init__.py  requirements.txt
sidecar/coco_sidecar/: __init__.py  api.py  coco_client.py  runtime.py  service.py  settings.py  stream_server.py
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: CocoXiaoMusic.tsx
src/components/ui/: slider.tsx
src/lib/: api.ts  types.ts
src/styles/: globals.css
views/: dashboard.html
